--- a/ex11/index.html
+++ b/ex11/index.html
@@ -5,27 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>javascriptのれんしゅう11</title>
-    <script type="text/javascript" src="main.js"></script>
+    <!--<script type="text/javascript" src="main.js"></script>-->
 </head>
 <body>
     <h1>11回目</h1>
     <p><a href="../index.html">戻る</a></p>
-    <p>クリックするとHello worldが<button onclick="addHello()">増える</button>ボタン。</p>
-    <p>クリックするとHello worldが<button onclick="eraseHello()">減る</button>ボタン。</p>
-    <p>クリックするとHello worldが<button onclick="changeHello()">ひらがなになる</button>ボタン。</p>
-    <p id="parent">親要素</p>
+    <p><a href="https://nssuperx.github.io/software_engineering_kadai1/"></a>施設利用料金計算</p>
+
     <hr>
     <h2>これはなにをやっているのか</h2>
     <p>
-        <a href="../ex02/index.html">2回目</a>との違いは以下になる
-        <ul>
-            <li>要素を作ってそのなかに文字列をいれている。</li>
-            <li>要素を作るときにクラスも設定することで一括処理ができるようになった。</li>
-        </ul>
-        今回はスクリプトの方にまじめにコメントつけたので、<a href="https://github.com/nssuperx/JS_training/blob/master/ex10/main.js">そっち</a>見たほうがわかりやすい。<br>
-        子要素を作ってあげてclass名を設定、こうすることで要素の取得（getElementsByClassName）が簡単になりいろいろ扱いやすくなった。<br>
-        追加と削除も、要素の追加と削除をするだけなのでわけのわからん文字列処理とかしてない。<br>
-        なぜはじめからこうしなかったのか。
+        前に課題で作ったやつを見直して、前よりきれいに書けないか頑張った。<br>
+        前のコードはhtmlファイルにスクリプト直書き、nameを使ってvalueにアクセス？などすごいことになっていた。<br>
+        nameつかってたのは配列とfor使わずに大量のおんなじ計算をしてたってことです。<br>
+        まだ変なところとか、むだそうなところあるけど、コード量も減ったしとりあえず動くのでOK。
     </p>
 
     <h2>参考にしたページ</h2>
@@ -36,6 +29,6 @@
             <li><a href="https://qiita.com/chihiro/items/1047e40514a778c08baa">javascript reduce</a></li>
         </ul>
     </p>
-    <a href="https://github.com/nssuperx/JS_training/tree/master/ex10">このページのソースコード</a>
+    <a href="https://github.com/nssuperx/JS_training/tree/master/ex11">このページのソースコード</a>
 </body>
 </html>
