--- a/ex11/index.html
+++ b/ex11/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>11回目</h1>
     <p><a href="../index.html">戻る</a></p>
-    <p><a href="https://nssuperx.github.io/software_engineering_kadai1/"></a>施設利用料金計算</p>
+    <p><a href="https://nssuperx.github.io/software_engineering_kadai1/">施設利用料金計算</a></p>
 
     <hr>
     <h2>これはなにをやっているのか</h2>
